test_app improvements

--- a/lib/sidekiq/async_http/web_ui/views/async_http.html.erb
+++ b/lib/sidekiq/async_http/web_ui/views/async_http.html.erb
@@ -20,7 +20,7 @@
         <div class="stat-card">
           <div class="stat-label"><%= t('async_http.average_duration') %></div>
           <div class="stat-value">
-            <span><%= avg_duration %></span><%= t('async_http.milliseconds') %>
+            <span><%= avg_duration %></span>
           </div>
         </div>
       </div>
