--- a/lib/sidekiq/async_http/web_ui/views/async_http.html.erb
+++ b/lib/sidekiq/async_http/web_ui/views/async_http.html.erb
@@ -1,6 +1,14 @@
 <div class="async-http-dashboard">
   <div class="section">
-    <h2><%= t('async_http.title') %></h2>
+    <div class="header-with-button">
+      <h2><%= t('async_http.title') %></h2>
+      <form action="<%= root_path %>async-http/clear" method="post" class="clear-stats-form">
+        <%= csrf_tag %>
+        <button type="submit" class="btn btn-danger" onclick="return confirm('<%= t('async_http.clear_confirm') %>');">
+          <%= t('async_http.clear_stats') %>
+        </button>
+      </form>
+    </div>
 
     <div class="async-http-stats">
       <!-- Summary Cards -->
